# NeuralNetworkExperiment

./: .clang-format  CMakeLists.txt  README.md
include/: utils.hpp
include/nn/: activation_function.hpp  individual.hpp  layer.hpp  neural_network.hpp  population.hpp
scripts/: build.sh  clean.sh  copy-package.sh  run.sh  start.sh
src/: main.cpp
src/nn/: activation_function.cpp  individual.cpp  layer.cpp  neural_network.cpp  population.cpp
